images compressed, cart overflow fixed

--- a/src/public/css/Header.css
+++ b/src/public/css/Header.css
@@ -340,6 +340,7 @@ header > .nav-div{
     display: flex;
     position: relative;
     padding: 5px 15px;
+    height: 50px;
 }
 .close-cart{
     position: absolute;
@@ -358,6 +359,8 @@ header > .nav-div{
     align-items: center;
     padding: 10px;
     border-top: 1px solid rgb(219, 219, 219);
+    height: 60px;
+    background-color: white;
 }
 .cart-bottom > button{
     border: none;
@@ -370,6 +373,8 @@ header > .nav-div{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    height: calc(100vh - 140px);
+    overflow-y: auto;
 }
 .item-in-cart{
     display: flex;
